Fixed aboutme index.html for image.

--- a/AboutMeSite/index.html
+++ b/AboutMeSite/index.html
@@ -7,7 +7,8 @@
     <title>Icebreaker Austin Campbell</title>
 </head>
 <body>
-    <img src="media/MyWedding.jpg" alt="My wedding photoshoot" width="280" height="400"/>
+    <!-- Media was not capitalized which did not show my image. -->
+    <img src="Media/MyWedding.jpg" alt="My wedding photoshoot" width="280" height="400"/>
     <h1>About Me</h1>
     <h2><i>Austin Campbell</i></h2>
     <p>I currently work full time as a lead termite technician for Orkin Pest Control, 
