--- a/BYUISite/byui.html
+++ b/BYUISite/byui.html
@@ -7,7 +7,8 @@
   <body>
     <header>
         <nav>
-            <a href="byui.html">Home</a>
+          <!-- ID Example here, see css -->
+            <a id="active" href="byui.html">Home</a>
             <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
             <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
@@ -19,7 +20,8 @@
       <p>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
     </main>
     <footer>
-      <p>My Web Page 20XX ©</p>
+      <!-- Class example here, see css -->
+      <p class="main-para">My Web Page 20XX ©</p>
     </footer>
   </body>
 </html>
