--- a/wwr/index.html
+++ b/wwr/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oar White Water Rafting</title>
 </head>
-<header>
-    <a id="logo_link" href="index.html">
-        <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
-    </a>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
-        <a href="contactus.html">Contact Us</a>
-    </nav>
-</header>
 <body>
+    <!-- Header and footer needs to be inside body as it is a visible piece of the website. -->
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Page 2</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
+    </header>
     <div id="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting.">
