--- a/wwr/index.html
+++ b/wwr/index.html
@@ -19,6 +19,9 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
+    <!-- End of header -->
+
+    <!-- Hero box aka feature-->
     <div id="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting.">
@@ -31,6 +34,9 @@
             </div>
         </section>
     </div>
+    <!-- End of hero box -->
+
+    <!-- Main portion of body -->
     <main class="home-grid">
         <!-- All the classes being the same INSIDE the main sections here will all be styled the same. -->
         <section class="rivers-card">
@@ -58,6 +64,9 @@
             <a class="join" href="rivers.html">Join Us</a>
         </section>
     </main>
+    <!-- End of main portion of body -->
+
+    <!--Begin footer -->
     <footer>
         <p>Dry Oar &copy; 2023 - Austin Campbell</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
@@ -74,5 +83,6 @@
             </a>
         </div>
     </footer>
+    <!-- End of Footer -->
 </body>
 </html>
