--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,85 +4,91 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css"
     <title>Oar White Water Rafting</title>
 </head>
 <body>
-    <!-- Header and footer needs to be inside body as it is a visible piece of the website. -->
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
-    </header>
-    <!-- End of header -->
+    <div id="content">
+        <!-- Header and footer needs to be inside body as it is a visible piece of the website. -->
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
+        </header>
+        <!-- End of header -->
 
-    <!-- Hero box aka feature-->
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting.">
-        </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Have an Adventure</h1>
-            <h4>Make Memories with Dry Oar</h4>
-            <div class="button-box">
-                <a class="book" href="contactus.html">Book Now</a>
+        <!-- Hero box aka feature-->
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting.">
             </div>
-        </section>
-    </div>
-    <!-- End of hero box -->
-
-    <!-- Main portion of body -->
-    <main class="home-grid">
-        <!-- All the classes being the same INSIDE the main sections here will all be styled the same. -->
-        <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-        <img class="mountains" src="images/mountains.jpg" alt="misty mountains">
-        <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p> 
-                Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. 
-                It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.
-            </p>
-            <a class="join" href="rivers.html">Join Us</a>
-        </section>
-    </main>
-    <!-- End of main portion of body -->
-
-    <!--Begin footer -->
-    <footer>
-        <p>Dry Oar &copy; 2023 - Austin Campbell</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
+            <section id="hero-msg">
+                <h1 class="home-title">Have an Adventure</h1>
+                <h4>Make Memories with Dry Oar</h4>
+                <div class="button-box">
+                    <a class="book" href="contactus.html">Book Now</a>
+                </div>
+            </section>
         </div>
-    </footer>
-    <!-- End of Footer -->
+        <!-- End of hero box -->
+
+        <!-- Main portion of body -->
+        <main class="home-grid">
+            <!-- All the classes being the same INSIDE the main sections here will all be styled the same. -->
+            <section class="rivers-card">
+                <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="images/river_icon.png" alt="river icon">
+                <h2>Rivers</h2>
+            </section>
+            <section class="camping-card">
+                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="images/fire_icon.png" alt="fire icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon">
+                <h2>Rapids</h2>
+            </section>
+            <div id="background"></div>
+            <img class="mountains" src="images/mountains.jpg" alt="misty mountains">
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>
+                <p> 
+                    Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. 
+                    It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.
+                </p>
+                <a class="join" href="rivers.html">Join Us</a>
+            </section>
+        </main>
+        <!-- End of main portion of body -->
+
+        <!--Begin footer -->
+        <footer>
+            <p>Dry Oar &copy; 2023 - Austin Campbell</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+                <!-- Since these are external sites, it is good practice to open them in another tab, 
+                hence the target="_blank". It will open the link in a new tab.-->
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+        <!-- End of Footer -->
+    </div>
 </body>
 </html>
