--- a/PortfolioSite/index.html
+++ b/PortfolioSite/index.html
@@ -7,30 +7,46 @@
     <title>Austin Campbell</title>
     <link type="text/css" rel="stylesheet" href="styles/styles.css" />
 </head>
-<body>
-    <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Experience</a>
-            <a href="#">Projects</a>
-            <a href="#">Contact Me</a>
-        </nav>
-    </header>
-    <main class="home-grid">
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum eos dolores optio iure ipsum fugit. Voluptates nostrum, eos accusantium ipsam pariatur, harum tempore autem quae, corrupti cum corporis enim optio!
-        </p>
-    </main>
-    <footer>
-        <p>Austin Campbell &copy; 2023</p>
-        <p id="button"><a href="contactme.html">Contact Me</a></p>
-        <div class="social">
-            <a href="https://github.com/AustinCBYUi">
-                <img src="images/github-mark-white.png" alt="github icon">
-            </a>
-            <!-- LinkdIn-->
-            <!-- Instagram? -->
-        </div>
-    </footer>
+<div id="content">
+    <body>
+        <header>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Experience</a>
+                <a href="#">Projects</a>
+                <a href="#">Contact Me</a>
+            </nav>
+        </header>
+        <main class="home-grid">
+            <div class="picture-box">
+                <img src="images/churchpic.jpg">
+            </div>
+            <!-- Cannot be inside my div, not experienced enough to keep box from getting too big.-->
+            <span class="picture-box-text">
+                <h3>Developer / Software Engineer</h3>
+                <!-- Naming these in order for styling?-->
+                <p class="one">
+                    I am a multi-purpose developer and aspiring web developer / software developer.
+                    I have an extremely focused work ethic and always strive to learn more on a consistent
+                    basis. I love to create or repair things. On my free time I enjoy hiking, learning new
+                    things, working on personal projects or fixing / building cars.
+                </p>
+            </span>
+        </main>
+        <!-- All footer stuff -->
+        <footer>
+            <div class="text">
+                <p>Austin Campbell &copy; 2023</p>
+                <a id="button" href="contactme.html">Contact Me</a>
+            </div>
+            <div class="social">
+                <a href="https://github.com/AustinCBYUi" target="_blank">
+                    <img src="images/github-mark-white.png" alt="github icon">
+                </a>
+                <!-- LinkdIn-->
+                <!-- Instagram? -->
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
