--- a/PortfolioSite/index.html
+++ b/PortfolioSite/index.html
@@ -7,22 +7,22 @@
     <title>Austin Campbell</title>
     <link type="text/css" rel="stylesheet" href="styles/styles.css" />
 </head>
-<div id="content">
-    <body>
+<body>
+    <div id="content">
         <header>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Experience</a>
+                <a href="experience.html">Experience</a>
                 <a href="#">Projects</a>
                 <a href="#">Contact Me</a>
             </nav>
         </header>
         <main class="home-grid">
             <div class="picture-box">
-                <img src="images/churchpic.jpg">
+                <img src="images/MyWedding.jpg">
             </div>
             <!-- Cannot be inside my div, not experienced enough to keep box from getting too big.-->
-            <span class="picture-box-text">
+            <div class="picture-box-text">
                 <h3>Developer / Software Engineer</h3>
                 <!-- Naming these in order for styling?-->
                 <p class="one">
@@ -31,7 +31,22 @@
                     basis. I love to create or repair things. On my free time I enjoy hiking, learning new
                     things, working on personal projects or fixing / building cars.
                 </p>
-            </span>
+                <p class="two">
+                    I have always had an interest in anything computers. I have experience with
+                    3D art, texturing, animating, game design, graphic design, website design and development
+                    and am now working hard at Brigham Young University toward my Bachelor's of Science majoring in
+                    software engineering. I have a keen desire to develop the future of technology. I have a passion for
+                    computers and a constant 
+                </p>
+                <p class="three">
+                    Soft skills I have developed overtime is teamwork, communication, keen intellect, a strong work ethic,
+                    attention to detail, leadership, operating under pressure, and following directions promptly. I have been
+                    able to develop these skills through the military, retail jobs, personal experience and college. I take great
+                    pride in my work and like to improve everything I do by learning more efficient ways to accomplish
+                    the task, or ways to accomplish tasks I don't already know how to do. I am confident in my abilities to
+                    communicate and accomplish singular or common goals within my work place or personal life.
+                </p>
+            </div>
         </main>
         <!-- All footer stuff -->
         <footer>
