Work on Portfolio, images + pages

--- a/PortfolioSite/experience.html
+++ b/PortfolioSite/experience.html
@@ -11,17 +11,48 @@
     <div id="content">
         <header>
             <nav>
+                <img src="images/logotest.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="experience.html">Experience</a>
-                <a href="#">Projects</a>
+                <a href="projects.html">Projects</a>
                 <a href="#">Contact Me</a>
             </nav>
         </header>
+
+        <h1>Languages</h1>
         <main id="home-grid">
             <div class="grid-item">
-                <h1>Python</h1>
-                <img src="images/python.png" alt="Python logo">
+                <h1>Python 3</h1>
+                <img src="images/python_again.svg" alt="Python logo">
             </div>
+            <div class="grid-item">
+                <h1>HTML</h1>
+                <img src="images/newhtml.png" alt="HTML logo">
+            </div>
+            <div class="grid-item">
+                <h1>CSS3</h1>
+                <img src="images/newcss.png" alt="CSS Logo">
+            </div>
+            <div class="grid-item">
+                <h1>C++</h1>
+                <img src="images/c++.png" alt="C++ Logo">
+            </div>
+            <div class="grid-item">
+                <h1>C#</h1>
+                <img src="images/csharp.png" alt="C# Logo">
+            </div>
+            <div class="grid-item">
+                <h1>Java</h1>
+                <img src="images/java.png" alt="Java logo">
+            </div>
+            <div class="grid-item">
+                <h1>Kotlin</h1>
+                <img src="images/kotlin.png" alt="Kotlin Logo">
+            </div>
+            <!-- Tools like photoshop A.I. here..-->
+        </main>
+        <h1>Tools</h1>
+        <main id="secondary-grid">
         </main>
 
         <!-- All footer stuff -->
@@ -33,6 +64,9 @@
             <div class="social">
                 <a href="https://github.com/AustinCBYUi" target="_blank">
                     <img src="images/github-mark-white.png" alt="github icon">
+                </a>
+                <a href="https://www.linkedin.com/in/austin-campbell-4aa2a4246/" target="_blank">
+                    <img class="two" src="images/linkedinlogo.webp" alt="Linkedin icon">
                 </a>
                 <!-- LinkdIn-->
                 <!-- Instagram? -->
