--- a/PortfolioSite/index.html
+++ b/PortfolioSite/index.html
@@ -11,15 +11,17 @@
     <div id="content">
         <header>
             <nav>
+                <!-- Fixed I think! -->
+                <img src="images/logotest.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="experience.html">Experience</a>
-                <a href="#">Projects</a>
+                <a href="projects.html">Projects</a>
                 <a href="#">Contact Me</a>
             </nav>
         </header>
         <main class="home-grid">
             <div class="picture-box">
-                <img src="images/MyWedding.jpg">
+                <img src="images/MyWedding.jpg" alt="My wedding photo">
             </div>
             <!-- Cannot be inside my div, not experienced enough to keep box from getting too big.-->
             <div class="picture-box-text">
@@ -58,6 +60,16 @@
                 <a href="https://github.com/AustinCBYUi" target="_blank">
                     <img src="images/github-mark-white.png" alt="github icon">
                 </a>
+                <a href="https://www.linkedin.com/in/austin-campbell-4aa2a4246/" target="_blank">
+                    <img class="two" src="images/linkedinlogo.webp" alt="Linkedin icon">
+                </a>
+            </div>
+            <!--
+            <div class="linkedin">
+                <a href="https://www.linkedin.com/in/austin-campbell-4aa2a4246/" target="_blank">
+                    <img src="images/linkedinlogo.webp" alt="Linkedin icon">
+                </a>
+            -->
                 <!-- LinkdIn-->
                 <!-- Instagram? -->
             </div>
