--- a/PortfolioSite/projects.html
+++ b/PortfolioSite/projects.html
@@ -19,6 +19,7 @@
                 <a href="#">Contact Me</a>
             </nav>
         </header>
+        <h1>Projects</h1>
         <main id="home-grid">
             <div class="grid-item">
                 <h1>DZXML Editor</h1>
@@ -34,7 +35,9 @@
             </div>
             <div class="grid-item">
                 <h1>Service Journal</h1>
-                <img src="images/servicejourn.png" alt="Program 2 showcase">
+                <a href="https://github.com/AustinCBYUi/ServiceJournal/tree/main" target="blank">
+                    <img src="images/servicejourn.png" alt="Program 2 showcase">
+                </a>
                 <p>Service Journal was a project I started to keep track of my customer base
                     with mechanic work. I got tired of trying to remember everything, so I decided to
                     develop this application to streamline the process. It is object oriented, and currently writes
