--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD130 Home Page</title>
-    <link type="text" rel="stylesheet" href="landing_page.css" />
+    <link type="text/css" rel="stylesheet" href="landing_page.css" />
 </head>
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
+    <h2>by Austin Campbell</h2>
     <nav>
         <a href="AboutMeSite/index.html">About Me Page</a>             
         <a href="wwr/index.html">White Water Rafting Website</a>
