--- a/PortfolioSite/site-plan.html
+++ b/PortfolioSite/site-plan.html
@@ -59,7 +59,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#292E33]</td><td class="secondary">[#30383B]</td><td class="accent1">[#1E2323]</td><td class="accent2">[#303B37]</td><td class="accent3">[#29332E]</td></tr>
+        <tr><td class="primary">[#292E33]</td><td class="secondary">[#30383B]</td><td class="accent1">[#1E2323]</td><td class="accent2">[#303B37]</td><td class="accent3">[#D9D9D9]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
