--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -123,8 +123,8 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
-
+    <h3>Gallery</h3>
+    <img src="images/wireframe.png" alt="gallery p2 wireframe">
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
