Optimized image and finished week 08 Stuff.

--- a/PortfolioSite/site-plan.html
+++ b/PortfolioSite/site-plan.html
@@ -96,8 +96,9 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Experience</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact Me</a>
       </nav>
       <hr>
       <h2>
@@ -108,11 +109,12 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Experience <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Projects  <!-- change this -->
         </div>
+        <!-- Contact Me page also -->
 
         <div class="top">
           &nbsp;
@@ -133,29 +135,59 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Soft skills and personal info:
+        I really enjoy doing projects on my own for fun and contributing to a team or group of people.
+        I’ve contributed to groups of 
+        developers, web designers, game developers, game modification creators (like the Steam Community), 
+        and even close friends who may need something specific. I genuinely enjoy writing code that people 
+        can understand and use for themselves, or applications they can use- while additionally creating 
+        something from an idea in my head is absolutely astounding to me.
+        <br>
+        customer service, respect of others, caring for others and the project / job at hand, relentless in getting the job done correctly, not cutting corners, 
+        listening and performing orders efficiently, and correctly. Maybe some other non-relatable skills or hobbies I have to show employers I am a healthy and 
+        well-rounded individual. I can rebuild motors or work on just about any car, I’ve always been about trying to fix things myself 
+        before paying others to do it. I’ve had laziness before, but no longer is that even a part of my blood. I take major pride in my ability to work all 
+        day in the AZ Sun and 100+ degree weather, come home and head straight to the gym, then head back home to either 
+        get a start on my school work or dinner for my wife and kid. Even so, during that list of activities I manage to squeeze in things like house-cleaning, 
+        car cleaning / detailing, oil changes, yard work, pest control sprays, fixing things around the house etc..
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/logotest.png" alt="image for homepage">
+        <img src="images/MyWeddingOpt.png" alt="image for homepage">
+        <img src="images/linkedinlogo.webp" alt="image for page">
+        <img src="images/github-mark-white.png" alt="image for page">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Experience</h3>
       <p>
-        [Written copy for the Page 2 here]
+        My experience page will have: I expect my website will answer if I am a good fit to either be employed or to perform work on a project for someone as a 
+        freelance developer. My website will include my specialized programming languages and tools I use frequently such as photoshop, 
+        AI, VSCode etc.. The projects section will include personal projects I developed or websites I developed on my free time to showcase 
+        my efficiency in what I do as well as my desire to create projects in the first place.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/c++.png" alt="image for page">
+        <img src="images/csharp.png" alt="image for page">
+        <img src="images/python_again.svg" alt="image for page">
+        <img src="images/newcss.png" alt="image for page">
+        <img src="images/java.png" alt="image for page">
+        <img src="images/kotlin.png" alt="image for page">
+        <img src="images/newhtml.png" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Projects</h3>
       <p>
-        [Written copy for the Page 3 here]
+        My projects page will showcase projects I have developed (major projects that have usage in real world applications / websites I’ve made) and want to show others. 
+        I hope that people can appreciate the attention to detail I put in my code, the commenting and thoughtfulness I express to walk not only my future self through the 
+        thought-process but also others who may be viewing it and wondering why I did something a specific way. Additionally I hope the unique 
+        ideas or simple ideas I express in the form of projects can stand out to employers/clients. I don’t want to make another web scraper, or 
+        Netflix clone. I want to make software that helps ME in my daily life, or helps me with my other ‘projects’ I’ve tried to start like my business 
+        Straight 6 Performance, or better yet a software that is potentially groundbreaking in mental health to help people connect with others anonymously 
+        for addiction recovery or the sort. I visualize my success being a servant of God to help others with whatever I can.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/dzxml-showcase.png" alt="image for page3">
+        <img src="images/servicejourn.png" alt="image for page3">
 
       </ul>
       <hr>
