--- a/PortfolioSite/site-plan.html
+++ b/PortfolioSite/site-plan.html
@@ -199,21 +199,26 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Want to do the parralax scrolling if possible.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/wireframes/Home-PageWire.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Experience</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        May use a image for background instead of plain.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/wireframes/Experience-Wire.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Projects</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Projects images will be linked to github page for specific project.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/wireframes/Projects-Wire.png" alt="page 3 wireframe">
+      <h3>Contact Me</h3>
+      <p>
+        May do background images instead of plain main background, contact also looks a bit plain
+      </p>
+      <img src="images/wireframes/Contactme-wire.png" alt="page 4 wireframe">
     </main>
   </body>
 
