--- a/PortfolioSite/site-plan.html
+++ b/PortfolioSite/site-plan.html
@@ -200,6 +200,7 @@
       <h3>Home</h3>
       <p>         
         Want to do the parralax scrolling if possible.
+        Also the snipping tool cut a bit short on a few of the wireframes, but that is all
       </p>
       <img src="images/wireframes/Home-PageWire.png" alt="home page wireframe">
 
