--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,7 +16,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="gallery.html">Gallery</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
@@ -72,7 +72,7 @@
         <!--Begin footer -->
         <footer>
             <p>Dry Oar &copy; 2023 - Austin Campbell</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="site-plan-rafting.html" target="_blank">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <!-- Since these are external sites, it is good practice to open them in another tab, 
