Optimized new picture, finished main pages html.

--- a/PortfolioSite/index.html
+++ b/PortfolioSite/index.html
@@ -19,14 +19,41 @@
                 <a href="#">Contact Me</a>
             </nav>
         </header>
+
+
         <main class="home-grid">
-            <div class="picture-box">
+            <div class="grid-item">
                 <img src="images/MyWedding.jpg" alt="My wedding photo">
+                <h3>About Me</h3>
+                <p>
+                    I am a multi-purpose developer and aspiring web / software developer.
+                    I was raised in Arizona, I've been exposed to technology since I was around
+                    7 years old. I played a lot of games growing up, and expressed my creativity
+                    by creating, fixing or contributing to things.
+                <br><br><br>
+                    On my free time I enjoy hiking, expanding my knowledge by reading or watching
+                    videos / movies, working on personal projects in both technology and physical
+                    things, fixing / building cars or off road vehicles, and shooting guns!
+                </p>
             </div>
-            <!-- Cannot be inside my div, not experienced enough to keep box from getting too big.-->
+            <div class="grid-item">
+                <img src="images/churchpicopt.png" alt="Picture of me, my wife and son.">
+                <h3>Soft Skills</h3>
+                <p>
+                    I have developed a plethora of soft skills overtime. I have an extremely focused
+                    work ethic, always striving to learn new things or challenge myself physically and
+                    mentally, undying desire to develop the future of technology. I am well spoken, can
+                    contribute profoundly to a team, attention to detail, leadership, operating under
+                    pressure, and following directions promptly and effectively. I am confident in my
+                    abilities to communicate and accomplish singular or common goals within my work place
+                    or personal life.
+                </p>
+            </div>
+            <!-- This is all old stuff? 
+             Cannot be inside my div, not experienced enough to keep box from getting too big.
             <div class="picture-box-text">
                 <h3>Developer / Software Engineer</h3>
-                <!-- Naming these in order for styling?-->
+                 Naming these in order for styling?
                 <p class="one">
                     I am a multi-purpose developer and aspiring web developer / software developer.
                     I have an extremely focused work ethic and always strive to learn more on a consistent
@@ -48,13 +75,14 @@
                     the task, or ways to accomplish tasks I don't already know how to do. I am confident in my abilities to
                     communicate and accomplish singular or common goals within my work place or personal life.
                 </p>
-            </div>
+            </div> -->
         </main>
         <!-- All footer stuff -->
         <footer>
             <div class="text">
                 <p>Austin Campbell &copy; 2023</p>
                 <a id="button" href="contactme.html">Contact Me</a>
+                <a id="siteplan" href="site-plan.html">Site Plan</a>
             </div>
             <div class="social">
                 <a href="https://github.com/AustinCBYUi" target="_blank">
@@ -64,12 +92,6 @@
                     <img class="two" src="images/linkedinlogo.webp" alt="Linkedin icon">
                 </a>
             </div>
-            <!--
-            <div class="linkedin">
-                <a href="https://www.linkedin.com/in/austin-campbell-4aa2a4246/" target="_blank">
-                    <img src="images/linkedinlogo.webp" alt="Linkedin icon">
-                </a>
-            -->
                 <!-- LinkdIn-->
                 <!-- Instagram? -->
             </div>
