Forgot to add siteplan to rest of css/html

--- a/PortfolioSite/experience.html
+++ b/PortfolioSite/experience.html
@@ -60,6 +60,7 @@
             <div class="text">
                 <p>Austin Campbell &copy; 2023</p>
                 <a id="button" href="contactme.html">Contact Me</a>
+                <a id="siteplan" href="site-plan.html">Site Plan</a>
             </div>
             <div class="social">
                 <a href="https://github.com/AustinCBYUi" target="_blank">
