--- a/PortfolioSite/projects.html
+++ b/PortfolioSite/projects.html
@@ -52,6 +52,7 @@
             <div class="text">
                 <p>Austin Campbell &copy; 2023</p>
                 <a id="button" href="contactme.html">Contact Me</a>
+                <a id="siteplan" href="site-plan.html">Site Plan</a>
             </div>
             <div class="social">
                 <a href="https://github.com/AustinCBYUi" target="_blank">
