--- a/PortfolioSite/index.html
+++ b/PortfolioSite/index.html
@@ -16,7 +16,7 @@
                 <a href="index.html">Home</a>
                 <a href="experience.html">Experience</a>
                 <a href="projects.html">Projects</a>
-                <a href="#">Contact Me</a>
+                <a href="contactme.html">Contact Me</a>
             </nav>
         </header>
 
