Lots of work for fun

--- a/PortfolioSite/index.html
+++ b/PortfolioSite/index.html
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <!-- Fixed I think! -->
-                <img src="images/logotest.png" alt="logo">
+                <img src="images/logotest.png" alt="Campbell Freelance Logo">
                 <a href="index.html">Home</a>
                 <a href="experience.html">Experience</a>
                 <a href="projects.html">Projects</a>
@@ -20,64 +20,59 @@
             </nav>
         </header>
 
-
+        
         <main class="home-grid">
+            <div class="parallax">
+                <div class="caption">
+                    <span class="border">Austin Campbell</span>
+                </div>
+            </div>
+
+            <!-- About Me Section -->
             <div class="grid-item">
-                <img src="images/MyWedding.jpg" alt="My wedding photo">
+                <img src="images/MyWeddingOpt.png" alt="My wedding photo">
                 <h3>About Me</h3>
                 <p>
                     I am a multi-purpose developer and aspiring web / software developer.
                     I was raised in Arizona, I've been exposed to technology since I was around
                     7 years old. I played a lot of games growing up, and expressed my creativity
-                    by creating, fixing or contributing to things.
+                    by creating, fixing or contributing to things. I am currently a freshman
+                    pursuing my bachelor's degree in computer science at Brigham Young University
+                    Idaho, majoring in Software Engineering.
                 <br><br><br>
                     On my free time I enjoy hiking, expanding my knowledge by reading or watching
                     videos / movies, working on personal projects in both technology and physical
                     things, fixing / building cars or off road vehicles, and shooting guns!
                 </p>
             </div>
+
+            <!-- Parallax Image 2 -->
+            <div class="parallax-2">
+            </div>
+
+            <!-- Soft Skills Grid Block -->
             <div class="grid-item">
                 <img src="images/churchpicopt.png" alt="Picture of me, my wife and son.">
                 <h3>Soft Skills</h3>
                 <p>
                     I have developed a plethora of soft skills overtime. I have an extremely focused
                     work ethic, always striving to learn new things or challenge myself physically and
-                    mentally, undying desire to develop the future of technology. I am well spoken, can
+                    mentally, undying desire to develop the future of technology.
+                    <br><br><br>
+                    I am well spoken, can
                     contribute profoundly to a team, attention to detail, leadership, operating under
                     pressure, and following directions promptly and effectively. I am confident in my
                     abilities to communicate and accomplish singular or common goals within my work place
                     or personal life.
                 </p>
             </div>
-            <!-- This is all old stuff? 
-             Cannot be inside my div, not experienced enough to keep box from getting too big.
-            <div class="picture-box-text">
-                <h3>Developer / Software Engineer</h3>
-                 Naming these in order for styling?
-                <p class="one">
-                    I am a multi-purpose developer and aspiring web developer / software developer.
-                    I have an extremely focused work ethic and always strive to learn more on a consistent
-                    basis. I love to create or repair things. On my free time I enjoy hiking, learning new
-                    things, working on personal projects or fixing / building cars.
-                </p>
-                <p class="two">
-                    I have always had an interest in anything computers. I have experience with
-                    3D art, texturing, animating, game design, graphic design, website design and development
-                    and am now working hard at Brigham Young University toward my Bachelor's of Science majoring in
-                    software engineering. I have a keen desire to develop the future of technology. I have a passion for
-                    computers and a constant 
-                </p>
-                <p class="three">
-                    Soft skills I have developed overtime is teamwork, communication, keen intellect, a strong work ethic,
-                    attention to detail, leadership, operating under pressure, and following directions promptly. I have been
-                    able to develop these skills through the military, retail jobs, personal experience and college. I take great
-                    pride in my work and like to improve everything I do by learning more efficient ways to accomplish
-                    the task, or ways to accomplish tasks I don't already know how to do. I am confident in my abilities to
-                    communicate and accomplish singular or common goals within my work place or personal life.
-                </p>
-            </div> -->
+            <!-- ^^^^ End of Grid Items Above ^^^^ -->
+            <!-- Parallax Image 3. -->
+            <div class="parallax-3">
+            </div>
         </main>
-        <!-- All footer stuff -->
+
+        <!-- vvvv All footer stuff vvvv -->
         <footer>
             <div class="text">
                 <p>Austin Campbell &copy; 2023</p>
