--- a/PortfolioSite/contactme.html
+++ b/PortfolioSite/contactme.html
@@ -24,19 +24,19 @@
             <div class="container">
                 <form method="post" action="https://forms.un-static.com/forms/69bdd12c05a1c19ad608f10519738f859a82ecd3">
                     <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your First Name..">
+                    <input type="text" id="fname" name="First Name" placeholder="Your First Name..">
 
                     <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your Last Name..">
+                    <input type="text" id="lname" name="Last Name" placeholder="Your Last Name..">
 
                     <label for="email">Email Address</label>
-                    <input type="email" id="mail" name="email" placeholder="Your Email Address..">
+                    <input type="email" id="mail" name="Email" placeholder="Your Email Address..">
 
                     <label for="company">Company (Optional)</label>
-                    <input type="text" id="comp" name="company" placeholder="Your Company..">
+                    <input type="text" id="comp" name="Company" placeholder="Your Company..">
 
                     <label for="textbox">Message</label>
-                    <textarea id="message" name="messa" placeholder="Your Message.." style="height:200px"></textarea>
+                    <textarea id="message" name="Message" placeholder="Your Message.." style="height:200px"></textarea>
 
                     <input type="submit" value="Submit">
                 </form>
