HTML Errors validation

--- a/PortfolioSite/index.html
+++ b/PortfolioSite/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link type="text/css" rel="stylesheet" href="styles/styles.css" />
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div id="content">
@@ -71,6 +71,7 @@
             <div class="parallax-3">
             </div>
         </main>
+    </div>
 
         <!-- vvvv All footer stuff vvvv -->
         <footer>
@@ -89,8 +90,6 @@
             </div>
                 <!-- LinkdIn-->
                 <!-- Instagram? -->
-            </div>
         </footer>
-    </div>
 </body>
 </html>
