--- a/PortfolioSite/projects.html
+++ b/PortfolioSite/projects.html
@@ -20,6 +20,36 @@
             </nav>
         </header>
         <h1>Projects</h1>
+        <!-- Accordion stuff from Week 12 -->
+        <button class="accordion">DZXML Editor</button>
+            <div class="panel">
+                <h1>DZXML Editor</h1>
+                <a href="https://github.com/AustinCBYUi/DZXML_Editor" target="_blank">
+                    <img src="images/dzxml-showcase.png" alt="Program showcase">
+                </a>
+                <p>DayZ XML Editor was my first console-based project released to the public.
+                    It was made to 'automate' the process of editing xml files for administrators
+                    of servers and opened to the modding community. The program modifys values in roughly
+                    over 20,000 lines to precision. The program still features a roadmap with plans to be 
+                    a full suite of tools for server owners in the future!
+                </p>
+            </div>
+        <button class="accordion">Service Journal</button>
+            <div class="panel">
+                <h1>Service Journal</h1>
+                <a href="https://github.com/AustinCBYUi/ServiceJournal/tree/main" target="blank">
+                    <img src="images/servicejourn.png" alt="Program 2 showcase">
+                </a>
+                <p>Service Journal was a project I started to keep track of my customer base
+                    with mechanic work. I got tired of trying to remember everything, so I decided to
+                    develop this application to streamline the process. It is object oriented, and currently writes
+                    customer information to a text file with a random UID. It will have a search
+                    function in the future and the ability to send invoices to customers! This
+                    project uses tkinter.
+                </p>
+            </div>
+
+            <!-- Original section before accordion discovery.-->
         <main id="home-grid">
             <div class="grid-item">
                 <h1>DZXML Editor</h1>
@@ -73,5 +103,21 @@
             </div>
         </footer>
     </div>
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+        
+        for (i = 0; i < acc.length; i++) {
+          acc[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var panel = this.nextElementSibling;
+            if (panel.style.maxHeight) {
+              panel.style.maxHeight = null;
+            } else {
+              panel.style.maxHeight = panel.scrollHeight + "px";
+            }
+          });
+        }
+    </script>
 </body>
 </html>
