Fixes / changes for W13

--- a/PortfolioSite/projects.html
+++ b/PortfolioSite/projects.html
@@ -25,7 +25,7 @@
             <div class="panel">
                 <h1>DZXML Editor</h1>
                 <a href="https://github.com/AustinCBYUi/DZXML_Editor" target="_blank">
-                    <img src="images/dzxml-showcase.png" alt="Program showcase">
+                    <img src="images/projects-images/new-dzxml.png" alt="Program showcase">
                 </a>
                 <p>DayZ XML Editor was my first console-based project released to the public.
                     It was made to 'automate' the process of editing xml files for administrators
@@ -38,7 +38,7 @@
             <div class="panel">
                 <h1>Service Journal</h1>
                 <a href="https://github.com/AustinCBYUi/ServiceJournal/tree/main" target="blank">
-                    <img src="images/servicejourn.png" alt="Program 2 showcase">
+                    <img src="images/projects-images/servicejourn.png" alt="Program 2 showcase">
                 </a>
                 <p>Service Journal was a project I started to keep track of my customer base
                     with mechanic work. I got tired of trying to remember everything, so I decided to
@@ -48,35 +48,23 @@
                     project uses tkinter.
                 </p>
             </div>
+        <button class="accordion">Chemistry Mole Calculator</button>
+        <div class="panel">
+            <h1>Chemistry Mole Calculator</h1>
+            <a href="https://github.com/AustinCBYUi/Chemistry-Mole-Calculator" target="_blank">
+                <img src="images/projects-images/mole-calculator-sc.png" alt="Program 3 showcase">
+            </a>
+            <p>
+                The Chemistry Mole Calculator was written as a school assignment I had during my freshman
+                year at Brigham Young University Idaho. Originally the expectations were to just print to the console with the correct
+                math and logic. We are given the opportunity to utilize the 'stretch challenge' to get full credit
+                for an assignment in which we must add creativity. I had been working a lot with Tkinter at the time
+                so I decided to write the project with a GUI! I figured maybe the application will come in handy at a later
+                date, so I put it on my github as well!
+            </p>
+        </div>
 
-            <!-- Original section before accordion discovery.-->
-        <main id="home-grid">
-            <div class="grid-item">
-                <h1>DZXML Editor</h1>
-                <a href="https://github.com/AustinCBYUi/DZXML_Editor" target="_blank">
-                    <img src="images/dzxml-showcase.png" alt="Program showcase">
-                </a>
-                <p>DayZ XML Editor was my first console-based project released to the public.
-                    It was made to 'automate' the process of editing xml files for administrators
-                    of servers and opened to the modding community. The program modifys values in roughly
-                    over 20,000 lines to precision. The program still features a roadmap with plans to be 
-                    a full suite of tools for server owners in the future!
-                </p>
-            </div>
-            <div class="grid-item">
-                <h1>Service Journal</h1>
-                <a href="https://github.com/AustinCBYUi/ServiceJournal/tree/main" target="blank">
-                    <img src="images/servicejourn.png" alt="Program 2 showcase">
-                </a>
-                <p>Service Journal was a project I started to keep track of my customer base
-                    with mechanic work. I got tired of trying to remember everything, so I decided to
-                    develop this application to streamline the process. It is object oriented, and currently writes
-                    customer information to a text file with a random UID. It will have a search
-                    function in the future and the ability to send invoices to customers! This
-                    project uses tkinter.
-                </p>
-            </div>
-        </main>
+
                     <!-- All footer stuff -->
         <footer>
             <div class="text">
