Fixed Validation errors

--- a/PortfolioSite/projects.html
+++ b/PortfolioSite/projects.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link type="text/css" rel="stylesheet" href="styles/projects_styles.css" />
+    <link type="text/css" rel="stylesheet" href="styles/projects_styles.css">
 </head>
 <body>
     <div id="content">
@@ -79,15 +79,6 @@
                 <a href="https://www.linkedin.com/in/austin-campbell-4aa2a4246/" target="_blank">
                     <img class="two" src="images/linkedinlogo.webp" alt="Linkedin icon">
                 </a>
-            </div>
-            <!--
-            <div class="linkedin">
-                <a href="https://www.linkedin.com/in/austin-campbell-4aa2a4246/" target="_blank">
-                    <img src="images/linkedinlogo.webp" alt="Linkedin icon">
-                </a>
-            -->
-                <!-- LinkdIn-->
-                <!-- Instagram? -->
             </div>
         </footer>
     </div>
