--- a/PortfolioSite/contactme.html
+++ b/PortfolioSite/contactme.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link type="text/css" rel="stylesheet" href="styles/contactme_styles.css" />
+    <link type="text/css" rel="stylesheet" href="styles/contactme_styles.css">
 </head>
 <body>
     <div id="content">
@@ -30,13 +30,13 @@
                     <input type="text" id="lname" name="Last Name" placeholder="Your Last Name..">
 
                     <label for="email">Email Address</label>
-                    <input type="email" id="mail" name="Email" placeholder="Your Email Address..">
+                    <input type="email" id="email" name="Email" placeholder="Your Email Address..">
 
                     <label for="company">Company (Optional)</label>
-                    <input type="text" id="comp" name="Company" placeholder="Your Company..">
+                    <input type="text" id="company" name="Company" placeholder="Your Company..">
 
                     <label for="textbox">Message</label>
-                    <textarea id="message" name="Message" placeholder="Your Message.." style="height:200px"></textarea>
+                    <textarea id="textbox" name="Message" placeholder="Your Message.." style="height:200px"></textarea>
 
                     <input type="submit" value="Submit">
                 </form>
@@ -57,15 +57,6 @@
                 <a href="https://www.linkedin.com/in/austin-campbell-4aa2a4246/" target="_blank">
                     <img class="two" src="images/linkedinlogo.webp" alt="Linkedin icon">
                 </a>
-            </div>
-            <!--
-            <div class="linkedin">
-                <a href="https://www.linkedin.com/in/austin-campbell-4aa2a4246/" target="_blank">
-                    <img src="images/linkedinlogo.webp" alt="Linkedin icon">
-                </a>
-            -->
-                <!-- LinkdIn-->
-                <!-- Instagram? -->
             </div>
         </footer>
     </div>
